--- a/cusine01.ipynb
+++ b/cusine01.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install imblearn"
+    "%pip install imblearn\n",
+    "## prac commit"
    ]
   },
   {
